[tool.poetry]
name = "szharas_brain_games"
version = "0.3.0"
description = ""
authors = ["Shynggys Zharas <sm.zharas@gmail.com>"]
packages = [
  { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_games:start_brain_even"
brain-calc = "brain_games.scripts.brain_games:start_brain_calc"
brain-gcd = "brain_games.scripts.brain_games:start_brain_gcd"
brain-progression = "brain_games.scripts.brain_games:start_brain_progression"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
